nuevas validaciones y ademas la implementacion de la notificacion al correo
